--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Arsenii Koniachenko <arsk293@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
